tests/syntax-error/nucleotide-count.ijs
nucleotide_counts=: '' < NB. 'syntax error
